Made reverse proxy
Changed how the website works. Instead of redirecting to the service, it
creates a reverse proxy to it

--- a/templates/select_menu.html
+++ b/templates/select_menu.html
@@ -148,12 +148,10 @@
       <!--     <div class="description">Secure shell connection</div> -->
       <!--   </div> -->
       <!-- </a> -->
-      <a href="/jellyfin" class="menu-item jellyfin" id="jellyfin-btn">
+      <a href="/jellyfin/" class="menu-item jellyfin" id="jellyfin-btn">
         <div class="icon">🎬</div>
-        <div class="content">
-          <div class="title">Jellyfin</div>
-          <div class="description">Media streaming server</div>
-        </div>
+        <div class="title">Jellyfin</div>
+        <div class="description">Media streaming server</div>
       </a>
     </div>
   </div>
